# cvm-plus-plus

./: .gitignore  CMakeLists.txt  README.md  demo_output.txt  instructions.txt  test.cvm
docs/: cvm_plus_plus_roadmap.md
include/: ast.h  compiler.h  lexer.h  opcode.h  parser.h  token.h  vm.h
scripts/: arithmetic.cvm  booleans.cvm  calculator.cvm  comparison.cvm  control_flow.cvm  edge_cases.cvm  fibonacci.cvm  hello.cvm  if_else.cvm  input_output.cvm  nested_loops.cvm  test_parser.cvm  variables.cvm  while_loop.cvm
src/: compiler.cpp  lexer.cpp  main.cpp  opcode.cpp  parser.cpp  vm.cpp
